fix: code block in long description of a package in dark mode

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -755,6 +755,10 @@ header .navbar.navbar-static-top {
               // long description of a package
               & > :nth-child(1) {
                 margin-top: 1em;
+
+                pre {
+                  @include terminal;
+                }
               }
 
               // how to install a package
